<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/corners"
    android:padding="16dp">


    <!-- Container 2 -->

    <FrameLayout
        android:id="@+id/FF_mudar_dados"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/RL_mudar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:background="@android:color/holo_blue_bright">

            <Button
                android:id="@+id/conf_opc"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@android:color/holo_green_light"
                android:text="Confirmar" />

            <TextView
                android:id="@+id/titulo_opcoes2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/mudar_opcoes"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="47dp">

                <ImageView
                    android:id="@+id/mudar_img_1"
                    android:layout_width="75dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp" />

                <ImageView
                    android:id="@+id/mudar_img_2"
                    android:layout_width="75dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp" />

                <ImageView
                    android:id="@+id/mudar_img_3"
                    android:layout_width="75dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp" />

                <ImageView
                    android:id="@+id/mudar_img_4"
                    android:layout_width="75dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp" />


                <EditText
                    android:id="@+id/novo_nome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/mudar_nome"
                    android:textColorHint="@color/white" />
            </LinearLayout>
        </RelativeLayout>
    </FrameLayout>






    <!-- Container 1 -->

    <RelativeLayout
        android:id="@+id/LL_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:visibility="visible">

        <TextView
            android:id="@+id/titulo_opcoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/opcoes"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/opcoes_img"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="36dp" />

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="56dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/opcoes_mudar_nome_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@android:color/holo_green_light"
                    android:padding="5dp"
                    android:text="@string/mudar_nome_imagem" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/opcoes_mudar_nome_img"
                    android:layout_alignStart="@+id/dynamic_spinner"
                    android:layout_margin="5dp"
                    android:text="@string/som"
                    android:textColor="@android:color/white" />

                <Spinner
                    android:id="@+id/dynamic_spinner"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"
                    android:layout_marginEnd="25dp"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/opcoes_nome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:text="Texto"
                    android:textColor="@color/white"
                    android:textSize="15dp" />
            </LinearLayout>
        </LinearLayout>


        <Button
            android:id="@+id/pt_opc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:background="@android:color/holo_orange_light"
            android:text="@string/voltar" />

    </RelativeLayout>
    <ProgressBar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:id="@+id/progress_bar"
        android:indeterminate="true"/>

</RelativeLayout>