<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/corners"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:visibility="gone"/>

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ok" 
        android:visibility="gone"/>

    <TextView
        android:id="@+id/txt_bem_vindo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:id="@+id/imagem_profile"
        android:layout_below="@id/txt_bem_vindo"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/planeta_inicio"
        android:layout_toRightOf="@id/imagem_profile"
        android:layout_below="@+id/txt_bem_vindo"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textColor="@android:color/white"
        tools:ignore="UnknownId"
        android:textStyle="bold"
        android:textSize="15sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pontuacao_inicio"
        android:layout_toRightOf="@id/imagem_profile"
        android:layout_below="@+id/planeta_inicio"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="-5dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="15sp"
        />


    <!-- buttoes -->


    <LinearLayout
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/imagem_profile"
        android:layout_marginEnd="14dp"
        android:orientation="vertical"
        android:id="@+id/LL_container">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_jogar"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/corners_caixas_verde"
                android:text="@string/btn_jogar"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btn_ranking"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/corners_caixas_amarelo"
                android:text="@string/ranking"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_enciclopedia"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/corners_caixas_amarelo"
                android:text="@string/enciclopedia"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btn_opcoes"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/corners_caixas_laranja"
                android:text="@string/opcoes"
                android:textColor="@android:color/black" />
        </LinearLayout>

    </LinearLayout>
    <ProgressBar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:id="@+id/progress_bar"
        android:indeterminate="true"/>

    
</RelativeLayout>